<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width= "match_parent"
        android:layout_height="match_parent"
        android:id="@+id/solution_tv"
        android:text="@string/solution_0"
        android:textSize="32sp"
        android:textAlignment="textEnd"
        android:layout_above="@id/result_tv"
        android:textColor="@color/black"
        android:layout_margin="18dp"
        android:paddingTop="50dp"
        />

    <TextView
        android:layout_width= "match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/result_tv"
        android:text="@string/result_0"
        android:textSize="64sp"
        android:textAlignment="textEnd"
        android:layout_above="@id/buttons_layout"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="#f1f1f1"
        android:paddingTop="26dp"
        android:paddingBottom="26dp"
        android:id="@+id/buttons_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_pow"
                android:layout_margin="12dp"
                android:text="@string/power"
                android:textSize="35sp"
                android:backgroundTint="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_sqrt"
                android:layout_margin="12dp"
                android:text="@string/sqrt"
                android:textSize="28sp"
                android:backgroundTint="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_ans"
                android:layout_margin="12dp"
                android:text="@string/ans"
                android:textSize="13sp"
                android:backgroundTint="@color/black"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_backspace"
                android:layout_margin="12dp"
                android:text="@string/backspace"
                android:textSize="28sp"
                android:backgroundTint="@color/black"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_c"
                android:layout_margin="12dp"
                android:text="@string/clear"
                android:textSize="28sp"
                android:backgroundTint="@color/clear_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_open_paren"
                android:layout_margin="12dp"
                android:text="@string/open_paren"
                android:textSize="28sp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_close_paren"
                android:layout_margin="12dp"
                android:text="@string/close_paren"
                android:textSize="28sp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_divide"
                android:layout_margin="12dp"
                android:text="/"
                android:textSize="28dp"
                android:backgroundTint="@color/operator_btn_color"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_7"
                android:layout_margin="12dp"
                android:text="7"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_8"
                android:layout_margin="12dp"
                android:text="8"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_9"
                android:layout_margin="12dp"
                android:text="9"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_mul"
                android:layout_margin="12dp"
                android:text="*"
                android:textSize="28dp"
                android:backgroundTint="@color/operator_btn_color"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_4"
                android:layout_margin="12dp"
                android:text="4"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_5"
                android:layout_margin="12dp"
                android:text="5"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_6"
                android:layout_margin="12dp"
                android:text="6"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_minus"
                android:layout_margin="12dp"
                android:text="-"
                android:textSize="28dp"
                android:backgroundTint="@color/operator_btn_color"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_1"
                android:layout_margin="12dp"
                android:text="1"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_2"
                android:layout_margin="12dp"
                android:text="2"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_3"
                android:layout_margin="12dp"
                android:text="3"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_plus"
                android:layout_margin="12dp"
                android:text="+"
                android:textSize="28dp"
                android:backgroundTint="@color/operator_btn_color"
                />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_percentage"
                android:layout_margin="12dp"
                android:text="%"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_0"
                android:layout_margin="12dp"
                android:text="0"
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_dot"
                android:layout_margin="12dp"
                android:text="."
                android:textSize="28dp"
                android:backgroundTint="@color/num_btn_color"
                />
            <com.google.android.material.button.MaterialButton
                android:layout_width="72dp"
                android:layout_height="72dp"
                app:cornerRadius="36dp"
                style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
                android:textColor="@color/white"
                android:id="@+id/button_equals"
                android:layout_margin="12dp"
                android:text="="
                android:textSize="28dp"
                android:backgroundTint="@color/equals_btn_color"
                />


        </LinearLayout>



    </LinearLayout>



</RelativeLayout>